Create Follow Model, Route & Controller
