# openapi.yaml
@@ -31,13 +31,11 @@ servers:
 # basePath in order to construct the full URL. 
 paths:
   '/accounts':
-
     get:
       tags:
         - Account
       summary:
         List all accounts
-      operationId: index
       security:
         - basic_auth: []
       responses: # list of responses
@@ -54,12 +52,10 @@ paths:
                   email: user1@example.com
         '401':
           description: Unauthorized
-
     post:
       tags:
         - Account
       summary: Create user account
-      operationId: create
       security:
         - basic_auth: []
       responses:
@@ -82,7 +78,6 @@ paths:
       tags:
         - Account
       summary: Get user by user id
-      operationId: show
       # list of parameters for the operation
       parameters:
         - name: id
@@ -108,13 +103,11 @@ paths:
           description: Unauthorized
         '404':
           description: Not Found
-
     # documentation for PUT operation for this path
     put:
       tags:
         - Account
       summary: Updated user
-      operationId: update
       parameters:
         - name: id
           in: path
@@ -141,21 +134,115 @@ paths:
               $ref: '#/components/schemas/Account'
         description: Updated user object
         required: true
-
     delete:
       tags:
         - Account
-      summary: Updated user
-      operationId: delete
+      summary: Delete user
       parameters:
         - name: id
           in: path
-          description: The user id that needs to be updated
+          description: The user id that needs to be delete
           required: true
           schema:
             type: number
       security:
         - basic_auth: []
+      responses:
+        '200':
+          description: Success
+        '401':
+          description: Unauthorized
+        '404':
+          description: Not Found
+
+  '/follows':
+    get:
+      tags:
+        - Follow
+      summary:
+        List all follow
+      security:
+        - basic_auth: [ ]
+      responses: # list of responses
+        '200':
+          description: Success
+          content:
+            application/json: # operation response mime type
+              schema: # response schema can be specified for each response
+                type: array
+                items:
+                  $ref: '#/components/schemas/Follow'
+              example: # response example
+                - follower_id: 1
+                  following_id: 2
+        '401':
+          description: Unauthorized
+
+    post:
+      tags:
+        - Follow
+      summary: Create a follow record for a user
+      security:
+        - basic_auth: [ ]
+      responses:
+        '201':
+          description: Follow created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Follow'
+              example: # response example
+                follower_id: 1
+                following_id: 2
+        '422':
+          description: Invalid Parameters or resource exist
+        '401':
+          description: Unauthorized
+
+  '/follows/{id}': # path parameter in curly braces
+    get: # documentation for GET operation for this path
+      tags:
+        - Follow
+      summary: Get a follow record
+      # list of parameters for the operation
+      parameters:
+        - name: id
+          in: path
+          description: The record id that needs to be fetched
+          required: true
+          schema:
+            type: number
+      # security schemas applied to this operation
+      security:
+        - basic_auth: [ ]
+      responses: # list of responses
+        '200':
+          description: Success
+          content:
+            application/json: # operation response mime type
+              schema: # response schema can be specified for each response
+                $ref: '#/components/schemas/Follow'
+              example: # response example
+                follower_id: 1
+                following_id: 2
+        '401':
+          description: Unauthorized
+        '404':
+          description: Not Found
+
+    delete:
+      tags:
+        - Follow
+      summary: Unfollow
+      parameters:
+        - name: id
+          in: path
+          description: The record id that needs to be delete
+          required: true
+          schema:
+            type: number
+      security:
+        - basic_auth: [ ]
       responses:
         '200':
           description: Success
@@ -170,10 +257,13 @@ components:
     Account:
       type: object
       properties:
+        id:
+          description: unique identifier
+          type: integer
         uname:
           description: User supplied username
           type: string
-          minLength: 4
+          minLength: 2
           example: John78
         email:
           description: User email address
@@ -184,7 +274,18 @@ components:
           description: User supplied password
           type: string
           minLength: 8
-
+    Follow:
+      type: object
+      properties:
+        id:
+          description: unique identifier
+          type: integer
+        follower_id:
+          description: reference to follower account
+          type: integer
+        following_id:
+          description: reference to following account
+          type: integer
   # Security scheme definitions that can be used across the definition.
   securitySchemes:
     basic_auth: # security definition name (you can name it as you want)
